# Forsys_Test_task

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/include/common/: student.h
common/src/: student.cpp
gui_client/: CMakeLists.txt  Client_form.ui  mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt  main.cpp
